# GNN

./: .gitignore  LICENSE  README.md  ablation.sh  clear_gpu_memory.py  diff.md  main.py  memory_optimizer.py  optimized_models.py  optimized_trainer.py  p1t.md  requirements.txt
code_base_analysis/: 1_composition_and_technical_analysis.md  2_architecture_and_component_integration.md  3_alignment_with_logical_construction_and_theoretical_framework.md  4_technical_and_theoretical_flaws.md  5_consolidated_assessment_and_recommendation.md
models/: baseline_models.py  diverse_attention.py  enhanced_gnn.py  gat_model.py  lstm_model.py  position_enhanced_gat.py
modules/: data_preprocessing.py  process_mining.py  rl_optimization.py
processmine/: README.md  __init__.py  advanced_workflow.py  cli.py  config.py  dgl.ipynb  pyproject.toml  setup.py
processmine/cli_modules/: data_pipeline.py  device_setup.py  logging_setup.py  model_training.py  process_analysis.py  reporting.py
processmine/core/: __init__.py  experiment.py  runner.py  training.py
processmine/data/: __init__.py  features.py  graph_builder.py  graphs.py  loader.py  preprocessing.py
processmine/models/: __init__.py  base.py  factory.py
processmine/models/baseline/: tree_models.py
processmine/models/gnn/: architectures.py  diverse.py  enhanced.py  gat.py  positional.py
processmine/models/sequence/: lstm.py
processmine/process_mining/: __init__.py  analysis.py  bottlenecks.py  conformance.py  optimization.py
processmine/processmine/: __init__.py  cli.py
processmine/processmine/core/: __init__.py  ablation.py  ablation_runner.py  advanced_workflow.py  experiment.py  runner.py  training.py
processmine/processmine/data/: __init__.py  graphs.py  loader.py  preprocessing.py
processmine/processmine/models/: __init__.py  factory.py
processmine/processmine/models/baseline/: mlp.py
processmine/processmine/models/gnn/: __init__.py  architectures.py
processmine/processmine/models/sequence/: __init__.py  lstm.py
processmine/processmine/process_mining/: analysis.py  conformance.py  optimization.py
processmine/processmine/tests/: conftest.py  integration_test.py  performance_test.py  test_cases.py  test_suite.py
processmine/processmine/utils/: __init__.py  dataloader.py  device.py  evaluation.py  memory.py
processmine/processmine/visualization/: __init__.py  viz.py
processmine/tests/: integration_test.py  performance_test.py  test_cases.py  test_suite.py
processmine/utils/: __init__.py  ablation.py  amp_training.py  checkpoint.py  dependency.py  losses.py  memory.py  reporting.py
processmine/visualization/: __init__.py  model_viz.py  plotting.py  process_viz.py  unified_viz.py  visualizer.py  viz.py
utils/: abalation.py  losses.py  memory_management.py
visualization/: process_viz.py
(+22 files in other folders)
